<resources>
    <string name="app_name">Gorilla bananas</string>
    <string name="action_settings">Settings</string>
    <string name="background">Back Ground Image</string>
    <string name="title">Gorilla does not eat bananas</string>
    <string name="startb">Start</string>
    <string name="continueb">Continue</string>
    <string name="exit">Exit</string>
    <string name="logOn">Log</string>
    <string name="LogOff">Hide</string>
    <string name="autoOn">Auto</string>
    <string name="autoOff">Manual</string>
    <string name="save">セーブ</string>
    <string name="save_text">セーブ</string>
    <string name="save_complete">セーブ完了</string>
    <string name="question_title">Choose!</string>
    <string name="question_1">どれをあげようか...？</string>
    <string name="question_2">どうしようか...？ </string>
    <string name="date1">2016年9月15日</string>
    <string name="date2">2016年10月7日</string>
    <string name="date3">2016年10月13日</string>
    <string name="date4">2016年10月20日</string>
    <string name="date5">2016年11月28日</string>
    <string name="date6">2017年1月12日</string>
    <string name="dateending">2017年3月15日</string>
    <string-array name="message1">
        <item>ヤス：明日からのスケジュールね、これ</item>
        <item>主人公：はい</item>
    </string-array>
    <string-array name="message2">
        <item>主人公:どの動物にしよう……？</item>
    </string-array>
    <string-array name="message22">
        <item>主人公:あれ？イルカなんていたっけ？</item>
    </string-array>
    <string-array name="question2">
        <item>ゴリラのドンキーくん</item>
        <item>ライオンのタカシくん</item>
        <item>ゾウのワタルくん</item>
    </string-array>
    <string-array name="question2_2">
        <item>ゴリラのドンキーくん</item>
        <item>ライオンのタカシくん</item>
        <item>ゾウのワタルくん</item>
        <item>イルカのハーヴェストくん</item>
    </string-array>
    <string-array name="message_aniD1">
        <item>ヤス:明日からのスケジュールね、これ</item>
        <item>主人公:はい</item>
        <item>ヤス:本当に大丈夫？噛まれたりするかもしれないから気をつけてね</item>
        <item>主人公:大丈夫ですよ！</item>
    </string-array>
    <string-array name="message_aniD2">
        <item>ハーヴェストくん:……キューン</item>
        <item>ハーヴェストが近づいてきた</item>
    </string-array>
    <string-array name="message_aniD3">
        <item>ハーヴェストは嬉しそうに鳴いている。</item>
    </string-array>
    <string-array name="message_aniD4">
        <item>ハーヴェストは暴れだし、私の手にガブリと噛み付いた。手には歯型がくっきりと残り、血がダラダラと垂れている。</item>
        <item>痛い。</item>
        <item>急いで救護室へ向かったけれど、その間にも血は流れ続けている。</item>
        <item>しばらく世話はできそうにないや。</item>
    </string-array>
    <string-array name="message_aniD5">
        <item>ハーヴェストは私の手にガブリと噛み付いた。手には歯型がくっきりと残り、血がダラダラと垂れている。</item>
        <item>痛い。</item>
        <item>急いで救護室へ向かったけれど、その間にも血は流れ続けている。</item>
        <item>しばらく世話はできそうにないや。</item>
    </string-array>
    <string-array name="message_aniD6">
        <item>主人公:かわいい！</item>
        <item>餌をあげて、掃除をしたら仕事は終わり。</item>
        <item>今日はお疲れ様、自分。</item>
    </string-array>
    <string-array name="message_aniD7">
        <item>ハーヴェストは餌を取りに行き、美味しそうに食べている。よかった。</item>
    </string-array>
    <string-array name="message_aniD8">
        <item>ハーヴェストは興奮して動き回り、私の手にガブリと噛み付いた。手には歯型がくっきりと残り、血がダラダラと垂れている。</item>
        <item>痛い。</item>
        <item>急いで救護室へ向かったけれど、その間にも血は流れ続けている。</item>
        <item>しばらく世話はできそうにないや。</item>
    </string-array>
    <string-array name="message_aniD9">
        <item>園長:あー君！今日でハーヴェストの世話は終わりだよ。</item>
        <item>主人公:はい。いざ終わるとなると寂しいです</item>
        <item>園長:そういうもんだよ。だから、入れ込みすぎても大変なんだ。</item>
        <item>園長:因みに明日、戸松くんが君の評価に来るから、よろしくね</item>
        <item>戸松:こんにちは。あなたの評価ですが……。</item>
        <item>主人公:……。</item>
        <item>戸松:完璧です！</item>
        <item>主人公:ホントですか！？</item>
        <item>戸松:はい。あの獰猛なハーヴェストをてなづけるとは、流石です。</item>
        <item>戸松:これからもどうか七木山動物公園をよろしくお願いします。</item>
        <item>主人公:はい、こちらこそお願いします。</item>
        <item>戸松:では、また明日から引き続きハーヴェストの世話をよろしくお願いします。</item>
        <item>主人公:ええ！？</item>
        <item>戸松:冗談ですよ。</item>
        <item>主人公:そ、そうですよね……。</item>
        <item>戸松:ハーヴェストの世話は嫌ですか？それなら……なんでもないです。</item>
        <item>主人公:なんですか</item>
        <item>戸松:ハーヴェストの世話をまたやって欲しいなあ、って</item>
        <item>主人公:考えておきます</item>
        <item>戸松:長話になってしまってすみません</item>
        <item>主人公:いえ、大丈夫ですよ</item>
        <item>戸松:（私の世話もして欲しい、なんて言えない……）</item>
    </string-array>
    <string-array name="message_aniend">
        <item>こうして、私の飼育生活は一旦終わりを迎えた。</item>
        <item>だけど、また来週からは別の仕事。</item>
        <item>気を引き締めてがんばろう。</item>
    </string-array>
    <string-array name="message_aniX1">
        <item>大丈夫！やることはやった！今日も頑張ろう！</item>
        <item>マコトくん:……ホッホッウホッ</item>
    </string-array>
    <string-array name="message_aniX1_2">
        <item>大丈夫！やることはやった！今日も頑張ろう！</item>
        <item>マコトくん:……ホッホッウホッ</item>
    </string-array>
    <string-array name="message_aniX1_3">
        <item>大丈夫！やることはやった！今日も頑張ろう！</item>
        <item>マコトくん:……ホッホッウホッ</item>
    </string-array>
    <string-array name="message_aniX2">
        <item>マコトくん:ウホウホ</item>
        <item>好感度が上がった！</item>
    </string-array>
    <string-array name="message_aniX3">
        <item>ドンキーくん:ウッホ</item>
        <item>好感度が少し上がった！</item>
    </string-array>
    <string-array name="message_aniX4">
        <item>ドンキーくん:ウホ……</item>
        <item>握りつぶしてしまった</item>
    </string-array>
    <string-array name="message_aniX5">
        <item>ドンキーくん:ホッホッホッホ！</item>
        <item>一枚一枚を上手につまんで食べている</item>
        <item>主人公:今日のドンキーはなんか違うわね</item>
        <item>ドンキーくん:ウホッホウッホ！</item>
    </string-array>
    <string-array name="message_aniX6">
        <item>園長:あー君！今日でドンキーの世話は終わりだよ。</item>
        <item>主人公:はい。いざ終わるとなると寂しいです</item>
        <item>園長:そういうもんだよ。だから、入れ込みすぎても大変なんだ。</item>
        <item>園長:因みに明日、戸松くんが君の評価に来るから、よろしくね</item>
        <item>戸松:評価通告です。お読みください</item>
    </string-array>
    <string-array name="message_aniX7">
        <item>戸松:ドンキーはあなたとの別れを惜しんでいます。私はドンキーの世話を続けて欲しいと思っておりますが、どうですか。</item>
        <item>主人公:……次の希望調査は来週ですよね？それまで待って頂いてもよろしいですか</item>
        <item>戸松:もちろんです。良い返事を期待しております。</item>
    </string-array>
    <string-array name="message_aniX8">
        <item>戸松:まあまあ、といったところでしょう。</item>
        <item>私はアナタにドンキーの飼育を任せたこと、正解だと思っています。</item>
        <item>ですから、今度はよりよい仕事を期待していますよ。</item>
    </string-array>
    <string-array name="message_aniX9">
        <item>戸松:率直に言ってしまうと、アナタに飼育を任せて何かが変わったわけではありません。</item>
        <item>ドンキーは他の飼育員に任せることにします</item>
        <item>主人公:……。</item>
        <item>戸松:もう一度、やりたいのですか？わかりました。</item>
        <item>あとで上司に掛け合ってみますから、それ次第ではありますが。</item>
    </string-array>
    <string-array name="message_aniX10">
        <item>こうして、私の飼育生活は一旦終わりを迎えた。</item>
        <item>だけど、また来週からは別の仕事。</item>
        <item>気を引き締めてがんばろう。</item>
    </string-array>
    <string-array name="message_aniY1">
        <item>タカシくん:……ウウッ（爪を研いでいる）</item>
    </string-array>
    <string-array name="message_aniY1_2">
        <item>タカシくん:……ウウッ（背中を掻いている）</item>
    </string-array>
    <string-array name="message_aniY1_3">
        <item>タカシくん:……。（今にも眠ってしまいそうな目でこちらを見ている）</item>
    </string-array>
    <string-array name="message_aniY2">
        <item>タカシくんは肉にかぶりついた。</item>
        <item>美味しそうに食べてる。</item>
        <item>好感度が上がった！</item>
    </string-array>
    <string-array name="message_aniY3">
        <item>タカシくんは肉を食べている。</item>
        <item>でも食べおわるのは早くなかった。食欲が無いのかな。</item>
        <item>好感度が少し上がった！</item>
    </string-array>
    <string-array name="message_aniY4">
        <item>タカシくんはFOODをちらりと見ると前足で踏みつぶしてしまった。</item>
    </string-array>
    <string-array name="message_aniY5">
        <item>……今日は肉を食べる気分じゃないみたい。</item>
        <item>タカシくんは眠ってしまった。</item>
    </string-array>
    <string-array name="message_aniY6">
        <item>珍しく今日はFOODを美味しそうに食べてる。</item>
        <item>好感度が上がった！</item>
    </string-array>
    <string-array name="message_aniY7">
        <item>園長:あー君！今日でタカシの世話は終わりだよ。</item>
        <item>主人公:はい。いざ終わるとなると寂しいです</item>
        <item>園長:そういうもんだよ。だから、入れ込みすぎても大変なんだ。</item>
        <item>園長:因みに明日、戸松くんが君の評価に来るから、よろしくね</item>
        <item>戸松:評価通告です。お読みください</item>
    </string-array>
    <string-array name="message_aniY8">
        <item>戸松:タカシはあなたとの別れを惜しんでいます。私はタカシの世話を続けて欲しいと思っておりますが、どうですか。</item>
        <item>主人公:……次の希望調査は来週ですよね？それまで待って頂いてもよろしいですか</item>
        <item>戸松:もちろんです。良い返事を期待しております。</item>
    </string-array>
    <string-array name="message_aniY9">
        <item>戸松:まあまあ、といったところでしょう。</item>
        <item>私はアナタにタカシの飼育を任せたこと、正解だと思っています。</item>
        <item>ですから、今度はよりよい仕事を期待していますよ。</item>
    </string-array>
    <string-array name="message_aniY10">
        <item>戸松:率直に言ってしまうと、アナタに飼育を任せて何かが変わったわけではありません。</item>
        <item>タカシは他の飼育員に任せることにします</item>
        <item>主人公:……。</item>
        <item>戸松:もう一度、やりたいのですか？わかりました。</item>
        <item>あとで上司に掛け合ってみますから、それ次第ではありますが。</item>
    </string-array>
    <string-array name="message_aniZ1">
        <item>ワタルは鼻を使って器用に水浴びをしている。</item>
    </string-array>
    <string-array name="message_aniZ1_2">
        <item>ワタルはケージの中を歩き回っている。</item>
    </string-array>
    <string-array name="message_aniZ1_3">
        <item>ワタルは鼻を揺らしてこちらに向かって来た。</item>
    </string-array>
    <string-array name="message_aniZ2">
        <item>美味しそうに食べてる。</item>
        <item>好感度が上がった！</item>
    </string-array>
    <string-array name="message_aniZ3">
        <item>あんまり食べおわるのは早くなかった。食欲が無いのかな。</item>
        <item>好感度が少し上がった！</item>
    </string-array>
    <string-array name="message_aniZ4">
        <item>ワタルはFOODをちらりと見ると鼻で払いのけてしまった。</item>
    </string-array>
    <string-array name="message_aniZ5">
        <item>しかし吐き出してしまった。</item>
    </string-array>
    <string-array name="message_aniZ6">
        <item>ワタルは珍しくFOODを食べている。今日はFOODをあげて正解だったみたい。</item>
        <item>好感度が上がった！</item>
    </string-array>
    <string-array name="message_aniZ7">
        <item>園長:あー君！今日でワタルの世話は終わりだよ。</item>
        <item>主人公:はい。いざ終わるとなると寂しいです</item>
        <item>園長:そういうもんだよ。だから、入れ込みすぎても大変なんだ。</item>
        <item>園長:因みに明日、戸松くんが君の評価に来るから、よろしくね</item>
        <item>戸松:評価通告です。お読みください</item>
    </string-array>
    <string-array name="message_aniZ8">
        <item>戸松:ワタルはあなたとの別れを惜しんでいます。私はワタルの世話を続けて欲しいと思っておりますが、どうですか。</item>
        <item>主人公:……次の希望調査は来週ですよね？それまで待って頂いてもよろしいですか</item>
        <item>戸松:もちろんです。良い返事を期待しております。</item>
    </string-array>
    <string-array name="message_aniZ9">
        <item>戸松:まあまあ、といったところでしょう。</item>
        <item>私はアナタにワタルの飼育を任せたこと、正解だと思っています。</item>
        <item>ですから、今度はよりよい仕事を期待していますよ。</item>
    </string-array>
    <string-array name="message_aniZ10">
        <item>戸松:率直に言ってしまうと、アナタに飼育を任せて何かが変わったわけではありません。</item>
        <item>ワタルは他の飼育員に任せることにします</item>
        <item>主人公:……。</item>
        <item>戸松:もう一度、やりたいのですか？わかりました。</item>
        <item>あとで上司に掛け合ってみますから、それ次第ではありますが。</item>
    </string-array>
    <string-array name="question_aniX">
        <item>バナナ</item>
        <item>ゴリラFOOD</item>
        <item>コーンフロスト</item>
    </string-array>
    <string-array name="question_aniY">
        <item>豚肉</item>
        <item>牛肉</item>
        <item>ライオンFOOD</item>
    </string-array>
    <string-array name="question_aniZ">
        <item>     草</item>
        <item>     リンゴ</item>
        <item>     象FOOD   </item>
    </string-array>
    <string-array name="question_aniD1">
        <item>     撫でる</item>
        <item>     噴気孔を触ってみる</item>
        <item>     口に手を近づける   </item>
    </string-array>
    <string-array name="question_aniD2">
        <item>     餌を投げる</item>
        <item>     背ビレを触ってみる</item>
        <item>     いかがわしいイルカBOOKを見せる  </item>
    </string-array>
    <string-array name="question_ben1">
        <item>先生に相談する</item>
        <item>授業を受けている誰かに聞く</item>
        <item>もう少し自力で頑張ってみる</item>
        <item>単位放棄する</item>
    </string-array>
</resources>