<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scaleType="fitXY"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="jtp.c.dendai.ac.jp.adventure.MainActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="false"
        android:contentDescription="@string/background"
        android:cropToPadding="false"
        android:maxHeight="700dp"
        android:scaleType="centerCrop"
        android:src="@drawable/first" />

    <TextView
        android:id="@+id/textarea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/imageView1"
        android:layout_margin="10dp"
        android:height="100dp"
        android:background="#80000000"
        android:lineSpacingMultiplier="1.5"
        android:padding="10dp"
        android:textColor="@android:color/white"
        android:textSize="16sp">

        <requestFocus />
    </TextView>

    <TextView
        android:id="@+id/textdate"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:background="#80000000"
        android:ems="10"
        android:padding="5dp"
        android:textAlignment="center"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/name"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="#80000000"
        android:padding="5dp"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:layout_above="@+id/textarea"
        android:layout_alignLeft="@+id/textarea"
        android:layout_alignStart="@+id/textarea"
        android:layout_alignRight="@+id/textdate"
        android:layout_alignEnd="@+id/textdate" />

    <Button
        android:id="@+id/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/save"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textdate"
        android:layout_marginRight="10dp"
        android:background="#80000000"
        android:padding="0dp"
        android:text="@string/exit"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/log"
        android:layout_alignTop="@+id/textdate"
        android:layout_marginEnd="9dp"
        android:layout_marginRight="9dp"
        android:layout_toLeftOf="@+id/exit"
        android:background="#80000000"
        android:padding="0dp"
        android:text="@string/save"
        android:textColor="@android:color/white" />

    <ToggleButton
        android:id="@+id/logButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/name"
        android:layout_alignLeft="@+id/qsave"
        android:layout_alignStart="@+id/qsave"
        android:layout_alignTop="@+id/name"
        android:background="#80000000"
        android:checked="false"
        android:textColor="@android:color/white"
        android:textOff="@string/logOn"
        android:textOn="@string/LogOff" />

    <ToggleButton
        android:id="@+id/autoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/logButton"
        android:layout_alignEnd="@+id/textarea"
        android:layout_alignRight="@+id/textarea"
        android:layout_alignTop="@+id/logButton"
        android:background="#80000000"
        android:checked="false"
        android:textColor="@android:color/white"
        android:textOff="@string/autoOff"
        android:textOn="@string/autoOn" />

    <TextView
        android:id="@+id/log"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignLeft="@+id/textdate"
        android:layout_below="@+id/textdate"
        android:layout_marginBottom="160dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="#80000000"
        android:lineSpacingMultiplier="1.5"
        android:padding="10dp"
        android:scrollbars="vertical"
        android:textColor="@android:color/white"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/koukan"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="42dp"
        android:background="#80000000"
        android:ems="10"
        android:padding="5dp"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:layout_marginStart="42dp"
        android:layout_above="@+id/log"
        android:layout_toRightOf="@+id/textdate"
        android:layout_toEndOf="@+id/textdate" />

</RelativeLayout>